fix layout on mobiles

--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ body {
     background-color: #012a4a;
     color: #a9d6e5;
     font-weight: bolder;
+    margin-right:40px;
 }
 
 .border {
@@ -71,6 +72,7 @@ body {
     display: flex;
     flex-flow: wrap;
     min-width: 250px;
+    margin-left:40px;
     width: 30%;
     height: 85%;
     cursor: crosshair;
